--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Edit.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/videos/create"
+﻿@page "/videos/edit"
 @using BlazorView.Services;
 @using MudBlazor;
 @using BussinessLayer;
@@ -12,44 +12,46 @@
 @inject StateContainer<Video> videoContainer;
 @inject NavigationManager navigationManager;
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Video</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <MudForm Model="Model" OnInvalidSubmit="OnCreated">
+        <MudForm Model="Model">
             <div class="form-group">
-                <MudTextField @bind-value="Model.Title" 
-                              T="string" class="form-control" 
-                              Label="Title" 
-                              Variant="Variant.Outlined" 
+                <MudTextField @bind-Value="Model.Title"
+                              T="string" class="form-control"
+                              Label="Title"
+                              Variant="Variant.Outlined"
+                              Immediate="true"
                               For="@( () => Model.Title )" />
             </div>
             <div class="form-group">
-                <MudTextField @bind-value="Model.Location" 
-                              T="string" class="form-control" 
-                              Label="Location" 
-                              Variant="Variant.Outlined" 
+                <MudTextField @bind-Value="Model.Location"
+                              T="string" class="form-control"
+                              Label="Location"
+                              Variant="Variant.Outlined"
+                              Immediate="true"
                               For="@( () => Model.Location )" />
             </div>
-                <div class="form-group">
-                    <div class="col-md-5 col-sm-12">
-                        <MudAutocomplete T="Format" Label="Formats" @bind-Value="Model.Format" SearchFunc="@SearchFormat"
-                                         ResetValueOnEmptyText="true"
-                                         CoerceText="true" CoerceValue="false"
-                                         ToStringFunc="@(f => f==null?null : $"{f.Extension}")" 
-                                         Variant="Variant.Outlined" 
-                                         Immediate="true"/>
-                    </div>
+            <div class="form-group">
+                <div class="col-md-5 col-sm-12">
+                    <MudAutocomplete T="Format" Label="Formats" @bind-Value="Model.Format" SearchFunc="@SearchFormat"
+                                     ResetValueOnEmptyText="true"
+                                     CoerceText="true" CoerceValue="false"
+                                     ToStringFunc="@(f => f==null?null : $"{f.Extension}")"
+                                     Variant="Variant.Outlined"
+                                     Immediate="true" />
                 </div>
+            </div>
             <div class="form-group">
                 <div class="col-md-5 col-sm-12">
                     <MudAutocomplete T="Genre" Label="Genres" @bind-Value="SelectedGenre" SearchFunc="@SearchGenres"
                                      ResetValueOnEmptyText="true"
                                      CoerceText="true" CoerceValue="false"
-                                     ToStringFunc="@(g => g==null?null : $"{g.Content}")" 
-                                     Variant="Variant.Outlined" 
+                                     ToStringFunc="@(g => g==null?null : $"{g.Content}")"
+                                     Variant="Variant.Outlined"
                                      Immediate="true" />
                 </div>
                 <div class="col-md-5 col-sm-12">
@@ -67,7 +69,7 @@
                     <MudAutocomplete T="Author" Label="Authors" @bind-Value="SelectedAuthor" SearchFunc="@SearchAuthors"
                                      ResetValueOnEmptyText="true"
                                      CoerceText="true" CoerceValue="false"
-                                     ToStringFunc="@(a => a==null?null : $"{a.AuthorName}")" 
+                                     ToStringFunc="@(a => a==null?null : $"{a.AuthorName}")"
                                      Variant="Variant.Outlined"
                                      Immediate="true" />
                 </div>
@@ -86,8 +88,8 @@
                     <MudAutocomplete T="Tag" Label="Tags" @bind-Value="SelectedTag" SearchFunc="@SearchTags"
                                      ResetValueOnEmptyText="true"
                                      CoerceText="true" CoerceValue="false"
-                                     ToStringFunc="@(t => t==null?null : $"{t.Content}")" 
-                                     Variant="Variant.Outlined" 
+                                     ToStringFunc="@(t => t==null?null : $"{t.Content}")"
+                                     Variant="Variant.Outlined"
                                      Immediate="true" />
                 </div>
                 <div class="col-md-5 col-sm-12">
@@ -101,56 +103,61 @@
                 }
             </div>
             <div class="form-group">
-                <MudTextField @bind-value="Model.Size" 
-                              T="double?" class="form-control" 
-                              Label="Size" 
+                <MudTextField @bind-Value="Model.Size"
+                              T="double?" class="form-control"
+                              Label="Size"
                               Variant="Variant.Outlined"
-                              Adornment="Adornment.End" 
-                              AdornmentText="GB" 
+                              Adornment="Adornment.End"
+                              AdornmentText="GB"
+                              Immediate="true"
                               For="@( () => Model.Size )" />
             </div>
             <div class="form-group">
-                <MudTextField @bind-value="Model.Description" 
-                              T="string" class="form-control" 
-                              Label="Description" 
+                <MudTextField @bind-Value="Model.Description"
+                              T="string" class="form-control"
+                              Label="Description"
                               AutoGrow
-                              Variant="Variant.Outlined" 
-                               For="@( () => Model.Description )" />
-            </div>
-            <div class="form-group">
-                <MudTextField @bind-value="Model.Comment" 
-                              T="string" class="form-control" 
-                              Label="Comment"
-                              AutoGrow
-                              Variant="Variant.Outlined" 
+                              Variant="Variant.Outlined"
+                              Immediate="true"
+                              For="@( () => Model.Description )" />
+             </div>
+             <div class="form-group">
+                 <MudTextField @bind-Value="Model.Comment"
+                               T="string" class="form-control"
+                               Label="Comment"
+                               AutoGrow
+                               Variant="Variant.Outlined"
+                               Immediate="true"
                                For="@( () => Model.Comment )" />
-            </div>
-            <div class="form-group">
-                <MudTextField @bind-value="Model.Year" 
-                              T="int?" class="form-control" 
-                              Label="Year"
-                              Placeholder=" "
-                              Variant="Variant.Outlined" 
+             </div>
+             <div class="form-group">
+                 <MudTextField @bind-Value="Model.Year"
+                               T="int?" class="form-control"
+                               Label="Year"
+                               Placeholder=" "
+                               Variant="Variant.Outlined"
+                               Immediate="true"
                                For="@( () => Model.Year )" />
-            </div>
-            <div class="form-group">
-                <MudTextField @bind-value="Model.Copyright" 
-                              T="string" class="form-control" 
-                              Label="Copyright" 
-                              AutoGrow
-                              Variant="Variant.Outlined" 
+             </div>
+             <div class="form-group">
+                 <MudTextField @bind-Value="Model.Copyright"
+                               T="string" class="form-control"
+                               Label="Copyright"
+                               AutoGrow
+                               Variant="Variant.Outlined"
+                               Immediate="true"
                                For="@( () => Model.Copyright )" />
-            </div>
-            <div class="form-group">
-                 <MudButton Variant="Variant.Filled" 
-                            StartIcon="@Icons.Material.Filled.Save" 
-                            IconColor="Color.Primary" 
+             </div>
+             <div class="form-group">
+                 <MudButton Variant="Variant.Filled"
+                            StartIcon="@Icons.Material.Filled.Save"
+                            IconColor="Color.Primary"
                             Size="Size.Large"
-                            OnClick="CreateVideo">Save</MudButton>
-            </div>
-        </MudForm>
-    </div>
-</div>
+                            OnClick="EditVideo">Save</MudButton>
+             </div>
+         </MudForm>
+     </div>
+ </div>
 
  <div class="form-group">
      <MudButton Variant="Variant.Filled"
@@ -183,15 +190,15 @@
         Formats = await formatManager.ReadAllAsync(false, false);
         Tags = await tagManager.ReadAllAsync(false, false);
 
-        Model.Format = null;
-        Model.Genres = new List<Genre>();
-        Model.Authors = new List<Author>();
-        Model.Tags = new List<Tag>();
+        Model = videoContainer.Value;
+        SelectedGenres = videoContainer.Value.Genres;
+        SelectedAuthors = videoContainer.Value.Authors;
+        SelectedTags = videoContainer.Value.Tags;
     }
 
     void AddGenre()
     {
-        if(!SelectedGenres.Contains(SelectedGenre) && SelectedGenre != null)
+        if (!SelectedGenres.Contains(SelectedGenre) && SelectedGenre != null)
             SelectedGenres.Add(SelectedGenre);
         SelectedGenre = null;
     }
@@ -242,14 +249,14 @@
         return Tags.Where(c => c.Content.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
     }
 
-    private async Task CreateVideo()
+    private async Task EditVideo()
     {
         Model.Tags = SelectedTags;
         Model.Genres = SelectedGenres;
         Model.Authors = SelectedAuthors;
-        if (Model.Format != null)
+        if(Model.Format != null)
             Model.FormatId = Model.Format.FormatId;
-        await videoManager.CreateAsync(Model);
+        await videoManager.UpdateAsync(Model, true);
         navigationManager.NavigateTo("videos", true);
     }
 }
