Added video search mockup

--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Create.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Create.razor
@@ -18,7 +18,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <MudForm Model="Model" OnInvalidSubmit="OnCreated">
+        <MudForm Model="Model">
             <div class="form-group">
                 <MudTextField @bind-value="Model.Title" 
                               T="string" class="form-control" 
