--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Shared/NavMenu.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Videos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/user/create">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> UsersCreate
+            </NavLink>
+        </div>
     </nav>
 </div>
 
