Search done. Added vid ref views

--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Details.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BussinessLayer.Genre
+﻿@model BussinessLayer.Tag
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Genre</h4>
+    <h4>Tag</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.GenreId">Edit</a> |
-    <a asp-action="Index">Back to Genres</a>
+    <a asp-action="Edit" asp-route-id="@Model?.TagId">Edit</a> |
+    <a asp-action="Index">Back to Tags</a>
 </div>
