--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Create.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BussinessLayer.Genre
+﻿@model BussinessLayer.Tag
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Genre</h4>
+<h4>Tag</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,6 +26,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to Genres</a>
+    <a asp-action="Index">Back to Tags</a>
 </div>
 
