--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Delete.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BussinessLayer.Genre
+﻿@model BussinessLayer.Tag
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Genre</h4>
+    <h4>Tag</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,8 +20,8 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="GenreId" />
+        <input type="hidden" asp-for="TagId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to Genres</a>
+        <a asp-action="Index">Back to Tags</a>
     </form>
 </div>
