--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Index.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Genres/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BussinessLayer.Genre>
+﻿@model IEnumerable<BussinessLayer.Tag>
 
 @{
-    ViewData["Title"] = "Genres";
+    ViewData["Title"] = "Tags";
 }
 
-<h1>Genres</h1>
+<h1>Tags</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.Content)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.GenreId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GenreId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GenreId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.TagId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TagId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TagId">Delete</a>
             </td>
         </tr>
 }
