--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Shared/_Layout.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Formats" asp-action="Index">Format</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Genres" asp-action="Index">Genre</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Tags" asp-action="Index">Tag</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Tags" asp-action="Index">Tag</a>
