--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Videos/Details.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Videos/Details.cshtml
@@ -35,10 +35,10 @@
             <p>@String.Join(", ", Model.Authors.Select(a => a.AuthorName))</p>
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genres)
+            @Html.DisplayNameFor(model => model.Tags)
         </dt>
         <dd class="col-sm-10">
-            <p>@String.Join(", ", Model.Genres.Select(a => a.Content))</p>
+            <p>@String.Join(", ", Model.Tags.Select(a => a.Content))</p>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Tags)
