--- a/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Videos/Edit.cshtml
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BNTFileSystemProgram/Views/Videos/Edit.cshtml
@@ -31,11 +31,11 @@
                 <span asp-validation-for="FormatId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Genres</label>
+                <label class="control-label">Tags</label>
                 <br />
-                @foreach (Genre item in ViewBag.Genres)
+                @foreach (Tag item in ViewBag.Tags)
                 {
-                    <input class="viewCheckBox" name="Genres" type="checkbox" value="@item.GenreId" /> @item.Content
+                    <input class="viewCheckBox" name="Tags" type="checkbox" value="@item.TagId" /> @item.Content
                 }
             </div>
             <div class="form-group">
