--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Authors/Details.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Authors/Details.razor
@@ -1,25 +1,25 @@
-﻿@page "/genres/details/{Id}"
+﻿@page "/authors/details/{Id}"
 @using BussinessLayer;
 @using ServiceLayer;
-@inject GenreManager genreManager;
+@inject AuthorManager authorManager;
 
 <h3>Details</h3>
 
 <div>
-    <h4>Genre</h4>
+    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
             Name
         </dt>
         <dd class="col-sm-10">
-            @Model.Content
+            @Model.AuthorName
         </dd>
     </dl>
 </div>
 <div>
-    <a href="genres/edit/@Model.GenreId">Edit</a> |
-    <a href="genres">Back to List</a>
+    <a href="authors/edit/@Model.AuthorId">Edit</a> |
+    <a href="authors">Back to List</a>
 </div>
 
 
@@ -28,11 +28,11 @@
     [Parameter]
     public string Id { get; set; }
 
-    Genre Model = new Genre();
+    Author Model = new Author();
 
     protected override async Task OnInitializedAsync()
     {
-        Model = await genreManager.ReadAsync(Id, false, true);
+        Model = await authorManager.ReadAsync(Id, false, true);
     }
 
 }
