--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Details.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Details.razor
@@ -43,10 +43,10 @@
             <p>@String.Join(", ", Model.Authors.Select(a => a.AuthorName))</p>
         </dd>
         <dt class="col-sm-2">
-            Genres
+            Tags
         </dt>
         <dd class="col-sm-10">
-            <p>@String.Join(", ", Model.Genres.Select(a => a.Content))</p>
+            <p>@String.Join(", ", Model.Tags.Select(a => a.Content))</p>
         </dd>
         <dt class="col-sm-2">
             Tags
