--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Index.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Pages/Videos/Index.razor
@@ -53,9 +53,16 @@
                                       Immediate="true" />
                     </div>
                     <div>
-                        <MudSelect T="SearchItem.SearchNumberOption" Label="In" @bind-Value="SearchModel.SearchedNumberOption" AnchorOrigin="Origin.BottomCenter">
+                        <MudSelect T="SearchItem.SearchNumberOption" Label="In" @bind-Value="SearchModel.SelectedNumberOption" AnchorOrigin="Origin.BottomCenter">
                             <MudSelectItem Value="@(SearchItem.SearchNumberOption.Size)" />
                             <MudSelectItem Value="@(SearchItem.SearchNumberOption.Year)" />
+                        </MudSelect>
+                    </div>
+                    <div>
+                        <MudSelect T="SearchItem.SearchNumberComparatorOption" Label="In" @bind-Value="SearchModel.SelectedNumberComparatorOption" AnchorOrigin="Origin.BottomCenter">
+                            <MudSelectItem Value="@(SearchItem.SearchNumberComparatorOption.Equal)" />
+                            <MudSelectItem Value="@(SearchItem.SearchNumberComparatorOption.Greater)" />
+                            <MudSelectItem Value="@(SearchItem.SearchNumberComparatorOption.Less)" />
                         </MudSelect>
                     </div>
                     <div class="form-group">
@@ -133,6 +140,13 @@
                                Size="Size.Large"
                                OnClick="SearchVideo">Search</MudButton>
                 </div>
+                <div class="form-group">
+                    <MudButton Variant="Variant.Filled"
+                               StartIcon="@Icons.Material.Filled.Save"
+                               IconColor="Color.Primary"
+                               Size="Size.Large"
+                               OnClick="ClearSearchModel">Clear selection</MudButton>
+                </div>
             </MudForm>
         </MudItem>
     </MudGrid>
@@ -206,9 +220,13 @@
 </table>
 
 <script>
-    function hideDiv(){
+    function showDiv(){
         var selectDiv = document.getElementById("search-div");
         selectDiv.style.display = "block";
+    }
+    function hideDiv() {
+        var selectDiv = document.getElementById("search-div");
+        selectDiv.style.display = "none";
     }
 </script>
 
@@ -219,9 +237,9 @@
 
     bool ModelOrder = false;
 
-    Genre SelectedGenre = null;
-    Author SelectedAuthor = null;
     Tag SelectedTag = null;
+    Author SelectedAuthor = null;
+    Genre SelectedGenre = null;
 
     ICollection<Genre> Genres = new List<Genre>();
     ICollection<Author> Authors = new List<Author>();
@@ -236,7 +254,7 @@
 
     async Task LoadVideos()
     {
-        Model = await videoManager.ReadAllAsync(true, false, true);
+        Model = await videoManager.ReadAllAsync(true, false);
     }
 
     void SetBook(Video video)
@@ -301,6 +319,8 @@
 
     }
 
+    #region Search logic <---
+
     async Task OnSearchActivation()
     {
         Genres = await genreManager.ReadAllAsync(false, false);
@@ -308,14 +328,14 @@
         Formats = await formatManager.ReadAllAsync(false, false);
         Tags = await tagManager.ReadAllAsync(false, false);
 
-        await JS.InvokeVoidAsync("hideDiv");
+        await JS.InvokeVoidAsync("showDiv");
     }
 
-    void AddGenre()
+    void AddTag()
     {
-        if (!SearchModel.SelectedGenres.Contains(SelectedGenre) && SelectedGenre != null)
-            SearchModel.SelectedGenres.Add(SelectedGenre);
-        SelectedGenre = null;
+        if (!SearchModel.SelectedTags.Contains(SelectedTag) && SelectedTag != null)
+            SearchModel.SelectedTags.Add(SelectedTag);
+        SelectedTag = null;
     }
 
     void AddAuthor()
@@ -325,11 +345,11 @@
         SelectedAuthor = null;
     }
 
-    void AddTag()
+    void AddGenre()
     {
-        if (!SearchModel.SelectedTags.Contains(SelectedTag) && SelectedTag != null)
-            SearchModel.SelectedTags.Add(SelectedTag);
-        SelectedTag = null;
+        if (!SearchModel.SelectedGenres.Contains(SelectedGenre) && SelectedGenre != null)
+            SearchModel.SelectedGenres.Add(SelectedGenre);
+        SelectedGenre = null;
     }
 
     private async Task<IEnumerable<Format>> SearchFormat(string value)
@@ -340,12 +360,12 @@
         return Formats.Where(c => c.Extension.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
     }
 
-    private async Task<IEnumerable<Genre>> SearchGenres(string value)
+    private async Task<IEnumerable<Tag>> SearchTags(string value)
     {
         if (string.IsNullOrEmpty(value))
-            return Genres;
+            return Tags;
 
-        return Genres.Where(c => c.Content.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
+        return Tags.Where(c => c.Content.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
     }
 
     private async Task<IEnumerable<Author>> SearchAuthors(string value)
@@ -356,16 +376,95 @@
         return Authors.Where(c => c.AuthorName.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
     }
 
-    private async Task<IEnumerable<Tag>> SearchTags(string value)
+    private async Task<IEnumerable<Genre>> SearchGenres(string value)
     {
         if (string.IsNullOrEmpty(value))
-            return Tags;
+            return Genres;
 
-        return Tags.Where(c => c.Content.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
+        return Genres.Where(c => c.Content.StartsWith(value, StringComparison.InvariantCultureIgnoreCase));
     }
 
     async Task SearchVideo()
     {
-        
+        Model = await videoManager.ReadAllAsync(true, false, true);
+        switch (SearchModel.SelectedTextOption)
+        {
+            case SearchItem.SearchTextOption.Title:
+                Model = Model.Where(v => v.Title.Contains(SearchModel.SearchedString)).ToList();
+                break;
+            case SearchItem.SearchTextOption.Location:
+                Model = Model.Where(v => v.Location.Contains(SearchModel.SearchedString)).ToList();
+                break;
+            case SearchItem.SearchTextOption.Description:
+                Model = Model.Where(v => v.Description.Contains(SearchModel.SearchedString)).ToList();
+                break;
+            case SearchItem.SearchTextOption.Copyright:
+                Model = Model.Where(v => v.Copyright.Contains(SearchModel.SearchedString)).ToList();
+                break;
+            case SearchItem.SearchTextOption.Comment:
+                Model = Model.Where(v => v.Comment.Contains(SearchModel.SearchedString)).ToList();
+                break;
+        }
+
+        if(SearchModel.SelectedNumberOption == SearchItem.SearchNumberOption.Size)
+            switch (SearchModel.SelectedNumberComparatorOption)
+            {
+                case SearchItem.SearchNumberComparatorOption.Equal:
+                    Model = Model.Where(v => v.Size == SearchModel.SearchedNumber).ToList();
+                    break;
+                case SearchItem.SearchNumberComparatorOption.Greater:
+                    Model = Model.Where(v => v.Size > SearchModel.SearchedNumber).ToList();
+                    break;
+                case SearchItem.SearchNumberComparatorOption.Less:
+                    Model = Model.Where(v => v.Size < SearchModel.SearchedNumber).ToList();
+                    break;
+            }
+        else if (SearchModel.SelectedNumberOption == SearchItem.SearchNumberOption.Year)
+            switch (SearchModel.SelectedNumberComparatorOption)
+            {
+                case SearchItem.SearchNumberComparatorOption.Equal:
+                    Model = Model.Where(v => v.Year == SearchModel.SearchedNumber).ToList();
+                    break;
+                case SearchItem.SearchNumberComparatorOption.Greater:
+                    Model = Model.Where(v => v.Year > SearchModel.SearchedNumber).ToList();
+                    break;
+                case SearchItem.SearchNumberComparatorOption.Less:
+                    Model = Model.Where(v => v.Year < SearchModel.SearchedNumber).ToList();
+                    break;
+            }
+
+        if(SearchModel.SelectedFormat != null)
+        {
+            Model = Model.Where(v => v.Format == SearchModel.SelectedFormat).ToList();
+        }
+        if(SearchModel.SelectedGenres.Count() > 0)
+        {
+            Model = Model.Where(v => v.Genres.SetEquals(SearchModel.SelectedGenres)).ToList();
+        }
+        if (SearchModel.SelectedTags.Count() > 0)
+        {
+            Model = Model.Where(v => v.Tags.SetEquals(SearchModel.SelectedTags)).ToList();
+        }
+        if (SearchModel.SelectedAuthors.Count() > 0)
+        {
+            Model = Model.Where(v => v.Authors.SetEquals(SearchModel.SelectedAuthors)).ToList();
+        }
+
+        await JS.InvokeVoidAsync("hideDiv");
     }
+
+    async Task ClearSearchModel()
+    {
+        SelectedAuthor = null;
+        SelectedGenre = null;
+        SelectedTag = null;
+        SearchModel.SelectedGenres.Clear();
+        SearchModel.SelectedTextOption = SearchItem.SearchTextOption.None;
+        SearchModel.SelectedNumberOption = SearchItem.SearchNumberOption.None;
+        SearchModel.SelectedAuthors.Clear();
+        SearchModel.SelectedFormat = null;
+        SearchModel.SelectedTags.Clear();
+    }
+
+    #endregion
 }
