--- a/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Shared/NavMenu.razor
+++ b/BNTFileSystemProgram/BNTFileSystemProgram/BlazorView/Shared/NavMenu.razor
@@ -20,6 +20,21 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/tags">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Tags
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/authors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Authors
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/formats">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Formats
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/videos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Videos
             </NavLink>
